--- a/star-wars-crud/views/index.ejs
+++ b/star-wars-crud/views/index.ejs
@@ -4,15 +4,62 @@
   <head>
     <meta charset="UTF-8" />
     <title>Star Wars Quote App</title>
+    <link rel ="stylesheet" href ="/style.css" />
   </head>
 
   <body>
-    <h1>May Node and Express be with you.</h1>
+    <h1 data-position="header">May Node and Express be with you.</h1>
+    <section data-position="add-quote">
+        <h2>Add quote</h2>
 
-    <form action="/quotes" method="POST">
-      <input type="text" placeholder="name" name="name" />
-      <input type="text" placeholder="quote" name="quote" />
-      <button type="submit">Submit</button>
-    </form>
+        <form action="/quotes" method="POST">
+            <input type="text" placeholder="name" name="name" />
+            <input type="text" placeholder="quote" name="quote" />
+            <button type="submit">Submit</button>
+        </form>
+
+    </section>
+    <section data-position="update-quote">
+        <div>
+            <h2>Darth Vader Invades!</h2>
+            <p>
+                Replace the first Yoda quote with a quote written by Darth Vader.
+            </p>
+            <button id="update-button">Replace Yoda's Quote</button>
+        </div>
+
+    </section>
+
+    <section data-position="delete-quote">
+        <div>
+            <h2>Remove Darth Vader!</h2>
+            <p>
+                Delete one of Darth Vader's quotes. Does nothing if there are no more Darth Vader quotes.
+            </p>
+            <button id="delete-button">Delete Darth Vader's Quote</button>
+        </div>
+        <div id="message"></div>
+    </section>
+    <section data-position="quotes">
+        <h2>Quotes</h2>
+
+        <ul class ="quotes">
+            <!-- looping through the quotes array and pulling the name and quote for each and placing it here -->
+            <% for (let i = 0; i < quotes.length; i++) {%>
+                <li class="quote">
+                    <!-- output name/quote from the iterated quote object -->
+                    <span><%= quotes[i].name %></span>:
+                    <span><%= quotes[i].quote %></span>
+                </li>
+            <% } %>
+        </ul>
+    </section>
+
+   
+
+   
+
+
+    <script src ="/main.js"></script>
   </body>
 </html>
