--- a/quote-generator/style.css
+++ b/quote-generator/style.css
@@ -16,6 +16,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column; /* added because of pompompurin */
 }
 
 
@@ -84,6 +85,10 @@ button:active { /*on click will push the button down*/
     font-size: 1.5rem;
 }
 
+img {
+    margin-top: 25px;
+}
+
 .loader {
     border: 16px solid #f3f3f3; /* Light grey */
     border-top: 16px solid #333; 
@@ -105,5 +110,10 @@ button:active { /*on click will push the button down*/
 
     .quote-text {
         font-size: 2.5rem;
+    }
+    img {
+        display: flex;
+        flex-direction: column;
+        margin-top: 0;
     }
 }
