--- a/stories/views/dashboard.hbs
+++ b/stories/views/dashboard.hbs
@@ -17,10 +17,22 @@
             {{!-- it knows were in stories so for id it just needs _id not .id --}}
             {{!-- should it be stories href? --}}
                 <tr>
-                    <td><a href="/stores/{{_id}}"></a>{{title}}</td> 
+                    <td><a href="/stories/{{_id}}">{{title}}</a></td> 
                      <td>{{formatDate createdAt 'MMMM Do YYYY, h:mm:ss a'}}</td>
                     <td><span class="dash-status">{{status}}</span></td>
-                    <td></td>
+                    <td>
+                        <a href="/stories/edit/{{_id}}" class="btn btn-float">
+                            <i class="fas fa-edit"></i>
+                        </a>
+
+                        <form action="/stories/{{_id}}" method="POST" id="delete-form">
+                            <input type="hidden" name="_method" value="DELETE">
+                            <button type="submit" class="btn red">
+                                <i class="fas fa-trash"></i>
+                            </button>
+                        </form>
+
+                    </td>
                 </tr>
             {{/each}}
         </tbody>
