--- a/lets-make-a-meal/style.css
+++ b/lets-make-a-meal/style.css
@@ -1,10 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Homemade+Apple&family=Lobster&display=swap');
+
 #title-name {
-    font-size: 300%;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 290%;
+    font-family: 'Lobster', Georgia, 'Times New Roman', Times, serif;
     font-style: italic;
     -webkit-text-stroke: 1px black; /* width and color */
 }
-@media (max-width: 992px){
+@media (max-width: 800px){
     #title-name {
     
         font-size: 140%;
@@ -15,7 +17,7 @@
 #links {
     font-size: 150%;
     margin-bottom: 1em;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Lobster', 'Times New Roman', Times, serif;
     color:rgb(32, 32, 32);
     font-weight: 600;
     font-style: italic;
@@ -29,4 +31,78 @@
     background-position: center;
     /* image is always as tall as our screen is 100vh which is viewport height */
     min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: space-between;
+}
+
+
+/* display: flex;
+flex-direction: column;
+justify-content: space-between;
+text-align: center; */
+
+footer {
+    display: flex;
+    flex-direction: column;
+    text-align:center;
+}
+
+.second {
+    
+    border: 1px solid rgb(173, 173, 173);
+    /* border-style: inset; */
+    font-size: 2em;
+    margin: 15%;
+    background: rgba(0, 0, 0, 0.7);
+    border-radius: 7px;
+    font-family: 'Homemade Apple';
+    color: whitesmoke
+}
+
+.front-page-buttons {
+    font-size: 2em;
+    font-family: 'Homemade Apple';
+}
+.logging-in, .see-recipes, .about-us  {
+    border: 1px solid rgb(173, 173, 173);
+    padding: 0 30px;
+    background: rgba(0, 0, 0, 0.7);
+    color: whitesmoke;
+    border-radius: 7px;
+}
+
+#nav-options, .about-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: center;
+}
+
+.logging-in:hover, .see-recipes:hover, .about-us:hover {
+    color: rgb(233, 41, 41);
+    background: rgba(0, 0, 0, 1);
+}
+
+.about-section {
+    font-family: 'Lobster', Georgia, 'Times New Roman', Times, serif;
+    font-size: 3em;
+    border-top: 6px solid black;
+}
+
+@media (max-width: 500px){
+    .second {
+        display:none;
+    }
+    .front-page-buttons {
+        display: flex;
+        flex-direction: column;
+        margin: 0 10%;
+        gap: 10px
+    }
+
+    /* .logging-in, .see-recipes, .about-us{
+        margin-bottom: 5px;
+    } */
 }
