additional files being made in preperation to make the application full stack

--- a/lets-make-a-meal/views/index.html
+++ b/lets-make-a-meal/views/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css">
     <!-- custom CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../public/css/style.css">
 </head>
 <body>
 
@@ -17,17 +17,17 @@
         <nav class="black darken-3">
             <div class="nav-wrapper container">
         
-                <a href="#!" class="brand-logo center" id="title-name">Let's Make A Meal</a>
+                <a href="index.html" class="brand-logo center" id="title-name">Let's Make A Meal</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger show-on-large"><i class="fas fa-bars"></i></a>
                 <ul class="sidenav" id="mobile-demo">
                     <div>
-                        <div>
-                            <li><a href="/login" id="links">Login</a></li>
+                        <div id="nav-options">
+                            <li><a href="login.html" id="links">Login</a></li>
                             <li><a href="/recipes" id="links">Recipe Homepage</a></li>
                             <li><a href="/myrecipes" id="links">My Recipes</a></li>
                             <li><a href="/list" id="links">My Shopping List</a></li>
                         </div>
-                        <div id="nav-options">
+                        <div >
                             <li><a href="/auth/logout" id="links">Logout</a></li>
                         </div>
                     </div>
@@ -39,7 +39,7 @@
             <p class="initial message">Welcome to Let's Make A Meal! A community where cooking lovers all come together to post their favorite recipes and make shopping lists for ingredients. Click below to check out some of the latest recipes!</p>
         </section>
         <div class="front-page-buttons">
-                <span class="logging-in"><a href="">Login</a></span>
+                <span class="logging-in"><a href="login.html">Login</a></span>
                 <span class="see-recipes"><a href="">See Recipes</a></span>
                 <span class="about-us"><a href="#about">About Us</a></span>
         </div>
