--- a/lets-make-a-meal/public/css/style.css
+++ b/lets-make-a-meal/public/css/style.css
@@ -25,7 +25,7 @@
 }
 
 .bg-img {
-    background-image: url(assets/pasta.avif);
+    background-image: url('../assets/pasta.avif');
     /* cover is used in this case to see more of the image. without it it is more zoomed in*/
     background-size: cover; 
     background-position: center;
@@ -93,7 +93,8 @@ footer {
     font-family: 'Lobster', Georgia, 'Times New Roman', Times, serif;
     font-size: 3em;
     border-bottom: 2px solid rgb(54, 54, 54);
-    margin: 5% 15% 10% 15%;
+    border-top: 2px solid rgb(54, 54, 54);
+    margin: 10% 15% 10% 15%;
 }
 
 @media (max-width: 500px){
