editing some files basis should NOW be done

--- a/lets-make-a-meal/views/index.html
+++ b/lets-make-a-meal/views/index.html
@@ -17,7 +17,7 @@
         <nav class="black darken-3">
             <div class="nav-wrapper container">
         
-                <a href="index.html" class="brand-logo center" id="title-name">Let's Make A Meal</a>
+                <a href="index.html" class="brand-logo center" id="title-name">Let's Make It, Chef</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger show-on-large"><i class="fas fa-bars"></i></a>
                 <ul class="sidenav" id="mobile-demo">
                     <div>
@@ -36,7 +36,7 @@
             </div>
         </nav>
         <section class="second">
-            <p class="initial message">Welcome to Let's Make A Meal! A community where cooking lovers all come together to post their favorite recipes and make shopping lists for ingredients. Click below to check out some of the latest recipes!</p>
+            <p class="initial message">Welcome to Let's Make It, Chef! A community where cooking lovers all come together to post their favorite recipes and make shopping lists for ingredients. Click below to check out some of the latest recipes!</p>
         </section>
         <div class="front-page-buttons">
                 <span class="logging-in"><a href="login.html">Login</a></span>
@@ -47,7 +47,7 @@
     </header>
     <section class="about-section" id="about">
         <h2>About Us</h2>
-        <p class="first-about-line">After looking at countless recipes online, Brooke (the creater of "Let's Make A Meal") would usually jot down the ingredients she needed on a piece of paper to bring to the grocery store. Far too often, her list would magically dissapear leaving her to figure out on the spot what ingredients she needed. With the help of "Let's Make A Meal", Brooke and other users were able to browse different recipes, add the ingridents they needed to an online list, and be able to view that list to print as many times as needed or to even look at on their phone in the store!</p>
+        <p class="first-about-line">After looking at countless recipes online, Brooke (the creater of "Let's Make It, Chef") would usually jot down the ingredients she needed on a piece of paper to bring to the grocery store. Far too often, her list would magically dissapear leaving her to figure out on the spot what ingredients she needed. With the help of "Let's Make It, Chef", Brooke and other users were able to browse different recipes, add the ingridents they needed to an online list, and be able to view that list to print as many times as needed or to even look at on their phone in the store!</p>
     </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
