--- a/lets-make-a-meal/views/login.html
+++ b/lets-make-a-meal/views/login.html
@@ -16,7 +16,7 @@
         <nav class="black darken-3">
             <div class="nav-wrapper container">
         
-                <a href="index.html" class="brand-logo center" id="title-name">Let's Make A Meal</a>
+                <a href="index.html" class="brand-logo center" id="title-name">Let's Make It, Chef</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger show-on-large"><i class="fas fa-bars"></i></a>
                 <ul class="sidenav" id="mobile-demo">
                     <div>
