--- a/lets-make-a-meal/public/css/style.css
+++ b/lets-make-a-meal/public/css/style.css
@@ -1,15 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Homemade+Apple&family=Lobster&display=swap');
 
 #title-name {
-    font-size: 290%;
+    font-size: 280%;
     font-family: 'Lobster', Georgia, 'Times New Roman', Times, serif;
     font-style: italic;
     -webkit-text-stroke: 1px black; /* width and color */
 }
-@media (max-width: 800px){
+
+@media (max-width: 920px){
     #title-name {
     
         font-size: 140%;
+        -webkit-text-stroke: 0px black;
+    }
+}
+
+@media (max-width: 500px){
+    #title-name {
+    
+        font-size: 120%;
         -webkit-text-stroke: 0px black;
     }
 }
