--- a/lets-make-it-chef/views/index.ejs
+++ b/lets-make-it-chef/views/index.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css">
     <!-- custom CSS -->
-    <link rel="stylesheet" href="../public/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -17,12 +17,12 @@
         <nav class="black darken-3">
             <div class="nav-wrapper container">
         
-                <a href="index.html" class="brand-logo center" id="title-name">Let's Make It, Chef</a>
+                <a href="/" class="brand-logo center" id="title-name">Let's Make It, Chef</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger show-on-large"><i class="fas fa-bars"></i></a>
                 <ul class="sidenav" id="mobile-demo">
                     <div>
                         <div id="nav-options">
-                            <li><a href="login.html" id="links">Login</a></li>
+                            <li><a href="/login" id="links">Login</a></li>
                             <li><a href="/recipes" id="links">Recipe Homepage</a></li>
                             <li><a href="/myrecipes" id="links">My Recipes</a></li>
                             <li><a href="/list" id="links">My Shopping List</a></li>
