fixed spelling error

--- a/lets-make-it-chef/views/addRecipe.ejs
+++ b/lets-make-it-chef/views/addRecipe.ejs
@@ -36,7 +36,7 @@
         </nav>
     </header>
     <h1>ADD RECIPE:</h1>
-    <p>Want to add a recipe for the world to see? Simply enter the ingridents needed and the cooking instructions below</p>
+    <p>Want to add a recipe for the world to see? Simply enter the ingredients needed and the cooking instructions below</p>
     <div class="container">
         <form action="" method="POST">
         <div id="formfield">
