--- a/lets-make-it-chef/views/addRecipe.ejs
+++ b/lets-make-it-chef/views/addRecipe.ejs
@@ -35,23 +35,19 @@
             </div>
         </nav>
     </header>
-    <h1>ADD RECIPE:</h1>
-    <p>Want to add a recipe for the world to see? Simply enter the ingredients needed and the cooking instructions below</p>
+    <h1 class="addRecTitle">ADD RECIPE:</h1>
+    <p class="addRecPar">Want to add a recipe for the world to see? Simply enter the ingredients needed and the cooking instructions below</p>
     <div class="container">
         <form action="" method="POST">
-        <div id="formfield">
-            <table id="theTable">
-                <tr>
-                    <td><input type="text" name="text" class="text" size="50" placeholder="Ingredient" required></td>
-                    <td><input type="text" name="text" class="text" size="50" placeholder="Amount" required></td>
-                    <td><button>Remove <i class="fa fa-minus"></i></button></td>
-                </tr>
-                    
-            </table>
-            <input type="text" name="text" class="text" placeholder="Instructions" required>
+            <div id="formfield">
+                
+                <input type="text" name="text" class="text" size="50" placeholder="Instructions" required>
+                <input type="text" name="text" class="text" size="50" placeholder="Ingredient" required>
+                
          
-        </div>
-        <button class="add" onclick="add()"><i class="fa fa-plus"></i>Add Ingredient</button>
+            </div>
+        <button class="add" onclick="add()"><i class="fa fa-plus"></i> Add Ingredient </button>
+        <button class="remove" onclick="remove()"><i class="fa fa-minus"></i> Remove Ingredient </button>
         <input name="submit" type="Submit" value="Submit">
       </form>
       </div>
