--- a/lets-make-it-chef/views/login.ejs
+++ b/lets-make-it-chef/views/login.ejs
@@ -35,7 +35,22 @@
             </div>
         </nav>
     </header>
-    <p>LOGIN PAGE</p>
+    <div class="signing">
+        <h1 class="loginTitle">LOGIN</h1>
+    <p class="loginPar">Please Login Below</p>
+    <div class="container">
+        <div id="formfield">
+            <form action="/login" method="POST">
+                <input type="email" name="email" placeholder="Email" required>
+                <input type="password" name="password" placeholder="Password" required>
+                <input type="submit">
+            </form>
+        </div>   
+    </div>
+    
+    <p class="loginPar">New? Please create an account <a href="/signup" class="loginHere">here</a>!</p>
+    </div>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script>
         M.Sidenav.init(document.querySelector('.sidenav'))
