--- a/lets-make-it-chef/views/signup.ejs
+++ b/lets-make-it-chef/views/signup.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Let's Make It, Chef!</title>
+    <title>Login Page</title>
     <!-- link to bootstrap CDN for CSS -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -12,8 +12,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-    <header class="bg-img">      
+    <header>
         <nav class="black darken-3">
             <div class="nav-wrapper container">
         
@@ -27,7 +26,7 @@
                             <li><a href="/myrecipes" id="links">My Recipes</a></li>
                             <li><a href="/list" id="links">My Shopping List</a></li>
                         </div>
-                        <div >
+                        <div id="nav-options">
                             <li><a href="/auth/logout" id="links">Logout</a></li>
                         </div>
                     </div>
@@ -35,33 +34,28 @@
                 </ul>
             </div>
         </nav>
-        <section class="second">
-            <p class="initial message">Welcome to Let's Make It, Chef! A community where cooking lovers all come together to post their favorite recipes and make shopping lists for ingredients. Click below to check out some of the latest recipes!</p>
-        </section>
-        <div class="front-page-buttons">
-                <span class="logging-in"><a href="/login">Login</a></span>
-                <span class="see-recipes"><a href="">See Recipes</a></span>
-                <span class="about-us"><a href="#about">About Us</a></span>
-        </div>
-        <div></div>
     </header>
-    <section class="about-section" id="about">
-        <h2>About Us</h2>
-        <p class="first-about-line">After looking at countless recipes online, Brooke (the creater of "Let's Make It, Chef") would usually jot down the ingredients she needed on a piece of paper to bring to the grocery store. Far too often, her list would magically dissapear leaving her to figure out on the spot what ingredients she needed. With the help of "Let's Make It, Chef", Brooke and other users were able to browse different recipes, add the ingridents they needed to an online list, and be able to view that list to print as many times as needed or to even look at on their phone in the store!</p>
-    </section>
-
+    <div class="signing">
+        <h1 class="loginTitle">SIGN UP</h1>
+    <p class="loginPar">Please Sign Up Below</p>
+    <div class="container">
+        <div id="formfield">
+            <form action="/login" method="POST">
+                <input type="text" name="userName" placeholder="Username" required>
+                <input type="email" name="email" placeholder="Email" required>
+                <input type="password" name="password" placeholder="Password" required>
+                <input type="password" name="password" placeholder="Confirm Password" required>
+                <input type="submit">
+            </form>
+        </div>   
+    </div>
+    
+    <p class="loginPar">Have an account? Please login <a href="/login" class="loginHere">here</a>!</p>
+    </div>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script>
         M.Sidenav.init(document.querySelector('.sidenav'))
     </script>
-
-    <footer>
-        <section></section>
-        <section>
-            <p>For all questions and inquiries, please email us at <a href="" class="email-bottom">sampleemail@gmail.com</a> and we will respond to you within 24-48 hours.</p>
-        </section>
-        <section></section>
-    </footer>
-    
 </body>
 </html>
