adding new file and additonal changes to set up database and get passport semi working. need to fix mongoose latest version updates with passport

--- a/lets-make-it-chef/views/addRecipe.ejs
+++ b/lets-make-it-chef/views/addRecipe.ejs
@@ -35,7 +35,7 @@
             </div>
         </nav>
     </header>
-    <h1 class="addRecTitle">ADD RECIPE:</h1>
+    <h1 class="addRecTitle">ADD RECIPE</h1>
     <p class="addRecPar">Want to add a recipe for the world to see? Simply enter the ingredients needed and the cooking instructions below</p>
     <div class="container">
         <form action="" method="POST">
