adjusting some code and changing name of ejs signup confirmPassword to fix expect string got array

--- a/lets-make-it-chef/views/login.ejs
+++ b/lets-make-it-chef/views/login.ejs
@@ -50,7 +50,16 @@
     
     <p class="loginPar">New? Please create an account <a href="/signup" class="loginHere">here</a>!</p>
     </div>
-    
+    <% if (locals.messages.errors) { %>
+        <% messages.errors.forEach( el => { %>
+            <div class="alert alert-danger"><%= el.msg %></div>
+        <% }) %>    
+    <% } %>
+    <% if (locals.messages.info) { %>
+        <% messages.info.forEach( el => { %>
+            <div class="alert alert-danger"><%= el.msg %></div>
+        <% }) %>    
+    <% } %>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script>
         M.Sidenav.init(document.querySelector('.sidenav'))
