--- a/lets-make-it-chef/views/signup.ejs
+++ b/lets-make-it-chef/views/signup.ejs
@@ -40,7 +40,7 @@
     <p class="loginPar">Please Sign Up Below</p>
     <div class="container">
         <div id="formfield">
-            <form action="/login" method="POST">
+            <form action="/signup" method="POST">
                 <input type="text" name="userName" placeholder="Username" required>
                 <input type="email" name="email" placeholder="Email" required>
                 <input type="password" name="password" placeholder="Password" required>
