adding additional logout features

--- a/lets-make-it-chef/views/index.ejs
+++ b/lets-make-it-chef/views/index.ejs
@@ -28,7 +28,7 @@
                             <li><a href="/list" id="links">My Shopping List</a></li>
                         </div>
                         <div >
-                            <li><a href="/auth/logout" id="links">Logout</a></li>
+                            <li><a href="/logout" id="links">Logout</a></li>
                         </div>
                     </div>
                     
