trying to get add recipe database to work, cannot post /addRecipe/addRecipe for current error

--- a/lets-make-it-chef/views/addRecipe.ejs
+++ b/lets-make-it-chef/views/addRecipe.ejs
@@ -38,11 +38,12 @@
     <h1 class="addRecTitle">ADD RECIPE</h1>
     <p class="addRecPar">Want to add a recipe for the world to see? Simply enter the ingredients needed and the cooking instructions below</p>
     <div class="container">
-        <form action="" method="POST">
+        <form action="addRecipe/addRecipe" method="POST">
             <div id="formfield">
                 
-                <input type="text" name="text" class="text" size="50" placeholder="Instructions" required>
-                <input type="text" name="text" class="text" size="50" placeholder="Ingredient" required>
+                <input type="text" name="instructions" class="text" size="50" placeholder="Instructions" required>
+                <input type="text" name="amount" class="text" size="50" placeholder="Amount" required>
+                <input type="text" name="ingredient" class="text" size="50" placeholder="Ingredient" required>
                 
          
             </div>
