--- a/lets-make-it-chef/views/login.ejs
+++ b/lets-make-it-chef/views/login.ejs
@@ -23,7 +23,7 @@
                         <div id="nav-options">
                             <li><a href="/login" id="links">Login</a></li>
                             <li><a href="/recipes" id="links">Recipe Homepage</a></li>
-                            <li><a href="/myrecipes" id="links">My Recipes</a></li>
+                            <li><a href="/my-recipes" id="links">My Recipes</a></li>
                             <li><a href="/list" id="links">My Shopping List</a></li>
                         </div>
                         <div id="nav-options">
