--- a/lets-make-it-chef/views/addRecipe.ejs
+++ b/lets-make-it-chef/views/addRecipe.ejs
@@ -40,7 +40,8 @@
     <div class="container">
         <form action="/add-recipe/addRecipe" method="POST">
             <div id="formfield">
-                
+
+                <input type="text" name="title" id="title" class="text" size="50" placeholder="Title">
                 <input type="text" name="instructions" id="instructions" class="text" size="50" placeholder="Instructions">
                 <input type="text" name="amount" id="amount" class="text" size="50" placeholder="Amount">
                 <input type="text" name="ingredient" id="ingredient" class="text" size="50" placeholder="Ingredient">
