adding additional changes

--- a/lets-make-it-chef/views/index.ejs
+++ b/lets-make-it-chef/views/index.ejs
@@ -40,7 +40,7 @@
         </section>
         <div class="front-page-buttons">
                 <span class="logging-in"><a href="/login">Login</a></span>
-                <span class="see-recipes"><a href="">See Recipes</a></span>
+                <span class="see-recipes"><a href="/recipes">See Recipes</a></span>
                 <span class="about-us"><a href="#about">About Us</a></span>
         </div>
         <div></div>
