--- a/lets-make-it-chef/views/myRecipes.ejs
+++ b/lets-make-it-chef/views/myRecipes.ejs
@@ -37,7 +37,7 @@
     </header>
     
     <div class="welcome-back pushIt">
-        <h1>Welcome Back! <%= info.userName %></h1>
+        <h1 class="welcomeTitle">Welcome Back! <%= info.userName %></h1>
         <!-- compare to social media page on how to have the users above pull in properly by looking at controller as well -->
         <p class="new-rec">To create a new recipe, click <a href="/add-recipe" class="click-here">here</a>!</p>
         <h2>My Recipes:</h2>
