--- a/lets-make-it-chef/public/css/style.css
+++ b/lets-make-it-chef/public/css/style.css
@@ -226,7 +226,7 @@ input[type="Submit"]:hover{
     text-align: center;
 }
 
-.addRecTitle, .loginTitle {
+.addRecTitle, .loginTitle, .recipesTitle, .welcomeTitle  {
     font-family:  Georgia, 'Times New Roman', Times, serif;
 }
 
@@ -246,6 +246,7 @@ input[type="Submit"]:hover{
 
 .new-rec {
     background-color: rgb(231, 231, 231);
+    box-shadow: 4px 4px 2px rgb(150,150,150);
     border-radius: 4px;
     padding: 10px 10px 10px 10px;
 }
@@ -255,6 +256,7 @@ input[type="Submit"]:hover{
     flex-direction: column;
     align-items: center;
     background-color: rgb(231, 231, 231);
+    box-shadow: 4px 4px 2px rgb(150, 150, 150);
     border-radius: 4px;
     padding: 10px 10px 10px 10px;
     text-align: center;
