--- a/lets-make-it-chef/views/recipes.ejs
+++ b/lets-make-it-chef/views/recipes.ejs
@@ -36,7 +36,7 @@
         </nav>
     </header>
     <div class="pushIt">
-        <h2 class="centering">Look At All The Incredible Recipes We Have!</h2>
+        <h2 class="centering recipesTitle">Look At All The Incredible Recipes We Have!</h2>
         <% allRecipes.forEach( el => { %>
             <li class='recipeItem' data-id='<%=el._id%>'>
                 <span class="mainTitle"><%= el.title %></span>
