--- a/lets-make-it-chef/views/login.ejs
+++ b/lets-make-it-chef/views/login.ejs
@@ -48,7 +48,7 @@
         </div>   
     </div>
     
-    <p class="loginPar">New? Please create an account <a href="/signup" class="loginHere">here</a>!</p>
+    <p class="loginPar"><span class="new-return">New?</span> Please create an account <a href="/signup" class="loginHere">here</a>!</p>
     </div>
     <% if (locals.messages.errors) { %>
         <% messages.errors.forEach( el => { %>
