--- a/lets-make-it-chef/public/css/style.css
+++ b/lets-make-it-chef/public/css/style.css
@@ -358,3 +358,12 @@ input[type="Submit"]:hover{
     /* font-family: 'Lobster',Georgia, 'Times New Roman', Times, serif; */
     font-weight: bold;
 }
+
+.picture {
+    height: 500px;
+    width: 600px;
+    border: 2px solid grey;
+    border-radius: 4px;
+    margin-bottom: 2%;
+    margin-top: 1%;
+}
