--- a/lets-make-it-chef/views/addRecipe.ejs
+++ b/lets-make-it-chef/views/addRecipe.ejs
@@ -38,11 +38,12 @@
     <h1 class="black-title centering">Add Recipe</h1>
     <p class="addRecPar">Want to add a recipe for the world to see? Simply enter the ingredients needed and the cooking instructions below</p>
     <div class="container">
-        <form action="/add-recipe/addRecipe" method="POST">
+        <form action="/add-recipe/addRecipe" enctype="multipart/form-data" method="POST">
             <div id="formfield">          
                 <input type="text" name="title" id="title" class="text form-item" size="50" placeholder="Title">
                 <textarea type="text" name="ingredient" id="ingredient" class="text long-form" size="50" placeholder="Ingredients"></textarea>
                 <textarea type="text" name="instructions" id="instructions" class="text long-form" size="50" placeholder="Instructions"></textarea>
+                <input type="file" class="form-control" id="imageUpload" name="file">
                 <!-- <input type="text" name="amount" id="amount" class="text" size="50" placeholder="Amount"> -->        
             </div>
         <!-- <button class="add" onclick="add()"><i class="fa fa-plus"></i> Add Ingredient </button>
