--- a/lets-make-it-chef/views/myRecipes.ejs
+++ b/lets-make-it-chef/views/myRecipes.ejs
@@ -43,16 +43,23 @@
         <h2 class="red-title">My Recipes:</h2>
         <ul>
         <% recipes.forEach( el => { %>
-                <li class='recipeItem' data-id='<%=el._id%>'>
+                <li class='recipeItem' data-id='<%=el.id%>'>
                     <span class="mainTitle"><%= el.title %></span>
+                    <img class="img-fluid picture" src="<%= el.image%>" />
                     <span class="aTitle">Ingredients:</span>
-                    <span ><%= el.ingredient %></span>
+                    <% for(var i=0; i<el.ingredient.length; i++) {%>
+                        <p>- <%= el.ingredient[i] %></p>
+                    <% } %>
                     <!-- <span class="aTitle">Amount:</span>
                     <span><%= el.amount %></span> -->
                     <span class="aTitle">Instructions:</span>
-                    <span><%= el.instructions %></span>
+                    <ol>
+                        <% for(var i=0; i<el.instructions.length; i++) {%>
+                            <li> <%= el.instructions[i] %></li>
+                        <% } %>
+                    </ol>
                     <form
-                    action=""
+                    action="my-recipes/deletePost/<%= el._id%>?_method=DELETE"
                     method="POST"
                     class="col-3"
                   >
