--- a/lets-make-it-chef/views/myRecipes.ejs
+++ b/lets-make-it-chef/views/myRecipes.ejs
@@ -44,15 +44,15 @@
         <ul>
         <% recipes.forEach( el => { %>
                 <li class='recipeItem' data-id='<%=el.id%>'>
-                    <span class="mainTitle"><%= el.title %></span>
+                    <span class="mainTitle centering"><%= el.title %></span>
                     <img class="img-fluid picture" src="<%= el.image%>" />
-                    <span class="aTitle">Ingredients:</span>
+                    <h3 class="aTitle"><span>Ingredients:</span></h3>
                     <% for(var i=0; i<el.ingredient.length; i++) {%>
-                        <p>- <%= el.ingredient[i] %></p>
+                        <span class="ingredientItem">- <%= el.ingredient[i] %></span>
                     <% } %>
                     <!-- <span class="aTitle">Amount:</span>
                     <span><%= el.amount %></span> -->
-                    <span class="aTitle">Instructions:</span>
+                    <h3 class="aTitle"><span>Instructions:</span></h3>
                     <ol>
                         <% for(var i=0; i<el.instructions.length; i++) {%>
                             <li> <%= el.instructions[i] %></li>
@@ -63,7 +63,10 @@
                     method="POST"
                     class="col-3"
                   >
+                  <div class="buttonCenter">
                     <button type="submit" class='del black-hov button-dist'>Delete</button>
+                  </div>
+                    
                   </form>
                 </li>
                 <hr class="text-muted">
