adding image that supports edge and adding notes to avoid same username info

--- a/lets-make-it-chef/public/css/style.css
+++ b/lets-make-it-chef/public/css/style.css
@@ -34,7 +34,7 @@
 }
 
 .bg-img {
-    background-image: url('../assets/pasta.avif');
+    background-image: url('../assets/pasta.png');
     /* cover is used in this case to see more of the image. without it it is more zoomed in*/
     background-size: cover; 
     background-position: center;
